# logic-harvesting-scheduling

./: .gitignore  README.md  common.py  main.py  pyproject.toml  sat.py  smt.py
test/: hsp-checker  sol-visualizer  test.sh  vis.sh
test/data/: enunciado.hsp  enunciado.out  t_10_10_10_0_2_5_10.hsp  t_10_10_10_0_2_5_10.out  t_10_10_10_0_2_5_20.hsp  t_10_10_10_0_2_5_20.out  t_10_10_10_10_2_5_10.hsp  t_10_10_10_10_2_5_10.out  t_10_10_10_10_3_10_10.hsp  t_10_10_10_10_3_10_10.out  t_10_10_10_1_2_7_10.hsp  t_10_10_10_1_2_7_10.out  t_10_10_10_1_2_7_20.hsp  t_10_10_10_1_2_7_20.out  t_10_10_10_30_3_10_10.hsp  t_10_10_10_30_3_10_10.out  t_10_10_10_40_2_10_10.hsp  t_10_10_10_40_2_10_10.out  t_10_10_10_40_2_10_20.hsp  t_10_10_10_40_2_10_20.out  t_10_10_10_40_3_10_10.hsp  t_10_10_10_40_3_10_10.out  t_10_10_10_40_3_10_20.hsp  t_10_10_10_40_3_10_20.out  t_10_10_10_40_3_10_30.hsp  t_10_10_10_40_3_10_30.out  t_10_10_10_40_3_10_40.hsp  t_10_10_10_40_3_10_40.out  t_10_10_10_40_4_8_40.hsp  t_10_10_10_40_4_8_40.out  t_10_10_10_60_4_8_40.hsp  t_10_10_10_60_4_8_40.out  t_20_20_10_0_2_5_30.hsp  t_20_20_10_0_2_5_30.out  t_20_20_10_0_3_10_80.hsp.skip  t_20_20_10_0_3_10_80.out  t_20_20_10_0_3_5_30.hsp  t_20_20_10_0_3_5_30.out  t_20_20_10_0_4_5_30.hsp  t_20_20_10_0_4_5_30.out  (+12 more)
