[project]
name = ""
version = "0.1.1"
description = ""
authors = [
    {name = "Ricardo Fernandes", email = "pdgrickerp@gmail.com"},
]
dependencies = [
    "python-sat>=0.1.7.dev19",
    "pypblib>=0.0.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
