[project]
name = "Harvesting Scheduling"
version = "1.1.1"
description = ""
authors = [
    {name = "Ricardo Fernandes", email = "pdgrickerp@gmail.com"},
]
dependencies = [
    "python-sat>=0.1.7.dev19",
    "pypblib>=0.0.4",
    "z3-solver>=4.11.2.0",
    "setuptools>=65.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
